# marie_rag_indexing

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  .watchignore  AI_ASSISTANT_PROFILE.md  DEVELOPMENT.md  SPECIFICATIONS.md  USER_STORIES.md  backend.Dockerfile  dev.sh  docker-compose.dev.yml  docker-compose.yml  frontend.Dockerfile  package-lock.json  package.json  pyproject.toml  start.sh
.github/: copilot-instructions.md
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: health.py  ingestion.py  models.py  plugins.py  sources.py  stats.py  vector_stores.py
backend/app/application/ports/: data_source.py  vector_store.py
backend/app/application/services/: assistant.py  chunking.py  embeddings.py  orchestrator.py
backend/app/core/: chunking.py  embeddings.py  models_search.py  opensearch_client.py  orchestrator.py
backend/app/domain/: models.py
backend/app/plugins/: base.py  local_file.py  mongodb_plugin.py  s3_plugin.py  sql_plugin.py  web_scraper.py
backend/tests/: __init__.py  conftest.py  test_api_health.py  test_ingestion.py  test_models.py  test_plugins.py  test_sources.py  test_vector_stores.py
docs/: DATA_SOURCES_RAG_REQUIREMENTS.md  INCONSISTENCIES.md  QUICK_FIXES.md  UI_UX_IMPROVEMENTS.md  UI_UX_QUICK_REFERENCE.md  UI_UX_SUMMARY.md  UI_UX_VISUAL_SHOWCASE.md  WORKPLAN.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/indices/: page.tsx
frontend/src/components/: ActionCard.tsx  DynamicConfigForm.tsx  EmptyState.tsx  EnhancedModal.tsx  ErrorBoundary.tsx  InfoTooltip.tsx  LogViewer.tsx  MainLayout.tsx  MongoDBConfigForm.tsx  PageHeader.tsx  ProgressSteps.tsx  Providers.tsx  SourceConfigForms.tsx  StatCard.tsx  StatusIndicator.tsx  TableCard.tsx
frontend/src/core/: branding.ts
frontend/src/services/: api.ts  assistantService.ts  indexService.ts  ingestionService.ts  jobService.ts  modelService.ts  mongodbService.ts  pluginService.ts  sourceService.ts  statsService.ts  vectorStoreService.ts
(+21 files in other folders)
